--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node -r dotenv/config app.js",
     "dev": "nodemon -r dotenv/config app.js"
   },
   "dependencies": {
