--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "scripts": {
     "start": "node -r dotenv/config app.js",
-    "dev": "nodemon -r dotenv/config app.js"
+    "dev": "nodemon -r dotenv/config app.js",
+    "kafka-run-consumer": "node ./kafka/consumer.js",
+    "kafka-run-producer": "node ./kafka/producer.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "kafka-node": "^5.0.0",
     "morgan": "^1.9.1",
     "sequelize": "^5.21.1",
     "tedious": "^8.2.0",
