--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon -r dotenv/config app.js"
+    "dev": "nodemon -r dotenv/config app.js",
+    "generateFile": "node scripts/generateFile.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
