--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "generateFile": "node scripts/generateFile.js"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "^1.7.3",
+    "aws-sdk": "^2.671.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
