--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generateFile": "node scripts/generateFile.js"
   },
   "dependencies": {
+    "@azure/event-hubs": "^2.1.4",
     "aws-sdk": "^2.671.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
